观察者模式
重新定义了观察者模式并写了2个demo帮助理解

--- a/src/Observer/index2.html
+++ b/src/Observer/index2.html
@@ -5,6 +5,9 @@
     <title>Document</title>
 </head>
 <body>
-    <script src="https://cdn.bootcdn.net/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    
+    <script src="../util/index.js"></script>
+    <script src="Observer.js"></script>
+    <script src="index2.js"></script>
 </body>
 </html>
