防抖-间隔时间内才执行一次, 节流-频繁操作的最后一次才执行

--- a/src/Throttler/index.html
+++ b/src/Throttler/index.html
@@ -8,6 +8,9 @@
 
 <body style="height: 2000px;">
 
+    <button id="login-btn">登录</button>
+
+    <script src="../util/index.js"></script>
     <script src="Throttler.js"></script>
 </body>
 
